# clippy

./: .gitignore  README.md
deploy/: frontend-deployment.yaml  frontend-service.yaml  gate-deployment.yaml  gate-service.yaml  pg-deployment.yaml  quill-deployment.yaml  quill-service.yaml
gate/: .env  Dockerfile  go.mod  go.sum  main.go
gate/controllers/: Get.go
gate/db/: dbctx.go
gate/models/: clip.go
gate/service/: clipService.go
gobit/: README.md  package.json
gobit/src/: index.ts
index/: Dockerfile  package.json
index/src/: App.tsx  index.tsx
index/src/api/: apis.ts
index/src/components/: NavBar.tsx
index/src/models/: clipboard.ts
index/src/pages/: ClipViewer.tsx  Create.tsx  index.tsx
quill/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go
quill/controllers/: Create.go
quill/db/: Schema.go  dbctx.go
quill/migrations/2022-03-26-103219_create_posts/: down.sql  up.sql
quill/models/: clip.go
quill/service/: clipService.go
quill/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
quill/src/Contollers/: CreateClip.rs
